@@ -16,9 +16,3 @@ C++14 compiler support
    (Although this date has expired, this change is currently on hold until
    the Ubuntu LTS versions of GCC and clang use C++20 by default, estimated
    May 2028.)
-
-`--make cmake`
-   The `--make cmake` options is deprecated and will be removed no sooner
-   than January 2026. Use `--make json` instead. Note that the CMake
-   integration shipping with Verilator (verilator-config.mk) already uses
-   `--make json` so no changes are necessary if using that.
