@@ -951,7 +951,7 @@ void V3Options::notify() VL_MT_DISABLED {
                 "--json-only or --E option");
     }
 
-    if (m_build && (m_gmake || m_cmake || m_makeJson)) {
+    if (m_build && (m_gmake || m_makeJson)) {
         cmdfl->v3error("--make cannot be used together with --build. Suggest see manual");
     }
 
@@ -982,7 +982,7 @@ void V3Options::notify() VL_MT_DISABLED {
     }
 
     // Make sure at least one make system is enabled
-    if (!m_gmake && !m_cmake && !m_makeJson) m_gmake = true;
+    if (!m_gmake && !m_makeJson) m_gmake = true;
 
     if (m_hierarchical && (m_hierChild || !m_hierBlocks.empty())) {
         cmdfl->v3error(
@@ -1583,11 +1583,7 @@ void V3Options::parseOptsList(FileLine* fl, const string& optdir, int argc,
     DECL_OPTION("-main", OnOff, &m_main);
     DECL_OPTION("-main-top-name", Set, &m_mainTopName);
     DECL_OPTION("-make", CbVal, [this, fl](const char* valp) {
-        if (!std::strcmp(valp, "cmake")) {
-            m_cmake = true;
-            fl->v3warn(DEPRECATED,
-                       "Option '--make cmake' is deprecated, use '--make json' instead");
-        } else if (!std::strcmp(valp, "gmake")) {
+        if (!std::strcmp(valp, "gmake")) {
             m_gmake = true;
         } else if (!std::strcmp(valp, "json")) {
             m_makeJson = true;
