@@ -226,7 +226,6 @@ private:
     bool m_bboxUnsup = false;       // main switch: --bbox-unsup
     bool m_binary = false;          // main switch: --binary
     bool m_build = false;           // main switch: --build
-    bool m_cmake = false;           // main switch: --make cmake
     bool m_context = true;          // main switch: --Wcontext
     bool m_coverageExpr = false;    // main switch: --coverage-expr
     bool m_coverageLine = false;    // main switch: --coverage-block
@@ -504,7 +503,6 @@ public:
     bool build() const { return m_build; }
     string buildDepBin() const { return m_buildDepBin; }
     void buildDepBin(const string& flag) { m_buildDepBin = flag; }
-    bool cmake() const { return m_cmake; }
     bool context() const VL_MT_SAFE { return m_context; }
     bool coverage() const VL_MT_SAFE {
         return m_coverageLine || m_coverageToggle || m_coverageExpr || m_coverageUser;
