@@ -47,7 +47,6 @@
 #include "V3DiagSarif.h"
 #include "V3EmitC.h"
 #include "V3EmitCMain.h"
-#include "V3EmitCMake.h"
 #include "V3EmitMk.h"
 #include "V3EmitMkJson.h"
 #include "V3EmitV.h"
@@ -652,7 +651,7 @@ static void process() {
     if (!v3Global.opt.lintOnly() && !v3Global.opt.serializeOnly() && !v3Global.opt.dpiHdrOnly()) {
         if (v3Global.opt.main()) V3EmitCMain::emit();
 
-        // V3EmitMk/V3EmitCMake/V3EmitMkJson must be after all other emitters,
+        // V3EmitMk/V3EmitMkJson must be after all other emitters,
         // as they and below code visits AstCFiles added earlier
         size_t src_f_cnt = 0;
         for (AstNode* nodep = v3Global.rootp()->filesp(); nodep; nodep = nodep->nextp()) {
@@ -660,7 +659,6 @@ static void process() {
                 src_f_cnt += cfilep->source() ? 1 : 0;
         }
         if (src_f_cnt >= V3EmitMk::PARALLEL_FILE_CNT_THRESHOLD) v3Global.useParallelBuild(true);
-        if (v3Global.opt.cmake()) V3EmitCMake::emit();
         if (v3Global.opt.makeJson()) V3EmitMkJson::emit();
         if (v3Global.opt.gmake()) V3EmitMk::emitmk();
     }
@@ -762,10 +760,6 @@ static bool verilate(const string& argString) {
             hierGraphp->writeCommandArgsFiles(false);
             V3EmitMk::emitHierVerilation(hierGraphp);
         }
-        if (v3Global.opt.cmake()) {
-            hierGraphp->writeCommandArgsFiles(true);
-            V3EmitCMake::emit();
-        }
         if (v3Global.opt.makeJson()) {
             hierGraphp->writeCommandArgsFiles(true);
             V3EmitMkJson::emit();
@@ -829,7 +823,6 @@ static string buildMakeCmd(const string& makefile, const string& target) {
 static void execBuildJob() {
     UASSERT(v3Global.opt.build(), "--build is not specified.");
     UASSERT(v3Global.opt.gmake(), "--build requires GNU Make.");
-    UASSERT(!v3Global.opt.cmake(), "--build cannot use CMake.");
     UASSERT(!v3Global.opt.makeJson(), "--build cannot use json build.");
     VlOs::DeltaWallTime buildWallTime{true};
     UINFO(1, "Start Build");
